--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
+        # for some reason, Windows cannot connect to Melpa on
+        # Emacs 27, so no Windows
         emacs-version:
           - 27.1
           - 27.2
